<resources>
    <string name="about_contrib_title">Contributors</string>
    <string name="about_feedback_title">Unity OTA Feedback</string>
    <string name="about_follow_title" />
    <string name="about_license_title">Open-Source License</string>
    <string name="about_ota_feature_missing_summary">"The feature XML file is missing from this ROM/Kernel. Without this file, you will not be able to update this app via the Play Store.
Please contact your ROM/Kernel developer and kindly ask them to add the file. Instructions are available on our website on how to do this."</string>
    <string name="about_ota_feature_missing_title">Missing OTA Feature File!!</string>
    <string name="about_ota_summary">"Copyright © 2014 - OTA Update Center
Copyright © 2014 - cstayton@xda.com
Fully open-source
Tap to visit Unity's XDA Forum thread"</string>
    <string name="about_ota_title">OTA Updater</string>
    <string name="about_uptodate">Keep Up-to-Date!</string>
    <string name="about_version_title">Version</string>
    <string name="about_version_unknown">Unknown Version (error in package manager)</string>
    <string name="alert_changelog">View Changelog</string>
    <string name="alert_changelog_title">Changelog for version %1$s</string>
    <string name="alert_downloading">Downloading…</string>
    <string name="alert_install_message">Installing this update will reboot into recovery to flash the ZIP file. After installation, the system will automatically reboot.</string>
    <string name="alert_install_title">Install ZIP</string>
    <string name="alert_logging_in" />
    <string name="alert_login_message" />
    <string name="alert_login_pass_hint" />
    <string name="alert_login_title" />
    <string name="alert_login_user_hint" />
    <string name="alert_nodata_message">"You have no data connection.
Please turn on Wi-Fi or Mobile Data in order to check for and download OTA updates."</string>
    <string name="alert_nodata_title">No Data Connection!</string>
    <string name="alert_noinstall_message">"Unfortunately, ROMs on your device must be flashed manually.
Please use the correct method for your device to flash the ROM

The .zip file is located at: %1$s"</string>
    <string name="alert_nowifi_message">"You are on a mobile connection.
This app uses data heavily to download ROM updates.
It is recommended to turn on Wi-Fi to avoid overage charges."</string>
    <string name="alert_nowifi_title">No Wi-Fi Connection!</string>
    <string name="alert_unsupported_message">"The ROM or Kernel developer has not enabled support in the ROM and/or Kernel for the OTA Updater! Please ask them (kindly) to add support before using this app!

(rom.ota.prop and kernel.ota.prop missing)"</string>
    <string name="alert_unsupported_title">Unsupported ROM/Kernel</string>
    <string name="alert_update_title">ROM update available!</string>
    <string name="alert_wifi_settings">Wi-Fi Settings</string>
    <string name="app_contrib">Contributors</string>
    <string name="app_downloads">Downloads</string>
    <string name="app_license">License</string>
    <string name="app_name">OTA Updater</string>
    <string name="app_settings">Settings</string>
    <string name="close">Close</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="downloads_changelog_title">Changelog:</string>
    <string name="downloads_complete">Finished! Ready to flash update!</string>
    <string name="downloads_failed_fileexists">Download failed: file already exists</string>
    <string name="downloads_failed_http">Download failed: HTTP Error</string>
    <string name="downloads_failed_md5">Download failed: MD5 error - invalid download</string>
    <string name="downloads_failed_mount">Download failed: No storage device found</string>
    <string name="downloads_failed_resume">Download failed: cannot resume download</string>
    <string name="downloads_failed_space">Download failed: Not enough space</string>
    <string name="downloads_failed_unknown">Download failed</string>
    <string name="downloads_file">%1$s (v%2$s)</string>
    <string name="downloads_file_nover">%1$s</string>
    <string name="downloads_kernel_label">Downloading Kernel Update</string>
    <string name="downloads_no_status">Unable to get download status</string>
    <string name="downloads_none">No Downloads Found</string>
    <string name="downloads_paused_network">Waiting for Data connection…</string>
    <string name="downloads_paused_retry">Waiting to retry download…</string>
    <string name="downloads_paused_unknown">Waiting for download to proceed…</string>
    <string name="downloads_paused_wifi">Waiting for Wi-Fi…</string>
    <string name="downloads_rom_label">Downloading ROM Update</string>
    <string name="downloads_size_progress_b">%1$.1f%% (%2$d / %3$d bytes)</string>
    <string name="downloads_size_progress_gb">%1$.1f%% (%2$d / %3$d GB)</string>
    <string name="downloads_size_progress_kb">%1$.1f%% (%2$d / %3$d KB)</string>
    <string name="downloads_size_progress_mb">%1$.1f%% (%2$d / %3$d MB)</string>
    <string name="downloads_size_progress_unknown_b">%1$.1f%% (%2$d bytes)</string>
    <string name="downloads_size_progress_unknown_gb">%1$.1f%% (%2$d GB)</string>
    <string name="downloads_size_progress_unknown_kb">%1$.1f%% (%2$d KB)</string>
    <string name="downloads_size_progress_unknown_mb">%1$.1f%% (%2$d MB)</string>
    <string name="downloads_starting">Starting Download…</string>
    <string name="exit">Exit</string>
    <string name="flash">Flash</string>
    <string name="hide">Hide</string>
    <string name="icon">Icon</string>
    <string name="ignore">Ignore</string>
    <string name="install">Install</string>
    <string name="kernel_download_alert_title">Downloading kernel update (%1$s version %2$s)</string>
    <string name="kernel_download_details">"An OTA Kernel update is available

Version: %1$s
Changelog:
%2$s"</string>
    <string name="kernel_download_done">OTA Kernel Download Complete</string>
    <string name="kernel_download_failed">OTA Kernel Download Failed</string>
    <string name="kernel_download_progress">OTA Kernel Update Downloading</string>
    <string name="kernel_download_ticker">OTA ROM Update Available</string>
    <string name="kernel_download_title">OTA Kernel Update Available: %1$s</string>
    <string name="kernel_toast_no_update">There is no kernel update at this time</string>
    <string name="kernel_unsupported">Unsupported Kernel</string>
    <string name="kernel_unsupported_summary">"The Kernel developer has not enabled support for the OTA Updater! Please ask them (kindly) to add support before using this app!

(kernel.ota.prop missing)"</string>
    <string name="kernel_update_to">This update will update your kernel (%1$s) to version %2$s</string>
    <string name="kernel_version">Kernel Version</string>
    <string name="kernel_version_unknown">Unknown Kernel Version</string>
    <string name="login" />
    <string name="main_about">About</string>
    <string name="main_device">Device</string>
    <string name="main_kernel">Kernel</string>
    <string name="main_otaid">OTA Updater ID</string>
    <string name="main_rom">ROM</string>
    <string name="menu_account" />
    <string name="menu_downloads">Downloads</string>
    <string name="menu_settings">Settings</string>
    <string name="notif_completed">Download finished. Tap to flash update.</string>
    <string name="notif_source">OTA Update</string>
    <string name="prokey_error_cancelled" />
    <string name="prokey_error_init" />
    <string name="prokey_error_other" />
    <string name="prokey_only_feature_message" />
    <string name="prokey_only_feature_title" />
    <string name="prokey_only_get" />
    <string name="prokey_redeemed_thanks" />
    <string name="prokey_success" />
    <string name="prokey_thanks" />
    <string name="retry">Retry</string>
    <string name="settings_notif_summary_off">"Update notifications will not be shown
You will have to open the app manually to see if there are updates"</string>
    <string name="settings_notif_summary_on">Update notifications will be shown</string>
    <string name="settings_notif_title">Notify me of new updates</string>
    <string name="settings_resetwarn_summary">Any warnings that have been ignored will be shown again.</string>
    <string name="settings_resetwarn_title">Reset ignored warnings</string>
    <string name="settings_title">OTA Updater Settings</string>
    <string name="settings_wifidl_summary_off">"Updates will be downloaded on whatever connection is available.

WARNING: Updates will download on the mobile network if Wi-Fi is unavailable. The updates may be quite large and possibly result in overage charges."</string>
    <string name="settings_wifidl_summary_on">Updates will only be downloaded when a Wi-Fi connection is available</string>
    <string name="settings_wifidl_title">Downloads on Wi-Fi only</string>
</resources>